--- a/datiJS/HTML%mortalità/style.css
+++ b/datiJS/HTML%mortalità/style.css
@@ -32,15 +32,15 @@ body
 
 /* The container */
 .container {
-    display:inline;
-
+    display:inline-flex;
+    
     cursor: pointer;
     font-size: 22px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    padding: 5px;
+
 
 
   }
