--- a/ProgettoTecno/src/progettotecno/Interface.form
+++ b/ProgettoTecno/src/progettotecno/Interface.form
@@ -34,14 +34,6 @@
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="TxtUsername" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
-                          <Component id="jLabel3" alignment="0" min="-2" pref="116" max="-2" attributes="0"/>
-                          <Component id="TxtPassword" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -58,6 +50,14 @@
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="TxtUsername" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
+                          <Component id="jLabel3" alignment="0" min="-2" pref="116" max="-2" attributes="0"/>
+                          <Component id="TxtPassword" alignment="0" min="-2" pref="126" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
               <Group type="103" groupAlignment="1" attributes="0">
@@ -113,15 +113,15 @@
                           </Group>
                           <Component id="jScrollPane2" min="-2" pref="229" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="unrelated" pref="57" max="32767" attributes="0"/>
+                      <EmptySpace type="unrelated" pref="62" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="TxtUsername" min="-2" pref="29" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jLabel3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="TxtPassword" min="-2" pref="29" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="TxtPassword" min="-2" pref="27" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="jLabel2" min="-2" pref="22" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -170,11 +170,6 @@
         <Property name="text" type="java.lang.String" value="Password"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="name" type="java.lang.String" value="" noResource="true"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="TxtPassword">
-      <Properties>
-        <Property name="name" type="java.lang.String" value="TxtPassword" noResource="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="Cancella">
@@ -304,6 +299,8 @@
         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="ckProvinciaItemStateChanged"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ckProvinciaActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="TxtPassword">
     </Component>
   </SubComponents>
 </Form>
